# rirc-server

./: Cargo.toml
examples/: basic_server.rs  tls_server.rs
src/: callbacks.rs  channel.rs  client.rs  commands.rs  lib.rs  message.rs  message_sink.rs  message_stream.rs  mode.rs  reply_codes.rs  server.rs  settings.rs
src/commands/: channels.rs  commands.rs  identity.rs  misc.rs  mod.rs  userqueries.rs
src/commands/handlers/: channels.rs  identity.rs  misc.rs  mod.rs  userqueries.rs
src/errors/: channel_not_found.rs  mod.rs
src/message/: message.rs  message_impl.rs  message_sink.rs  message_stream.rs  mod.rs  reply_codes.rs
tests/: lib.rs
