[package]
name = "rirc_server"
version = "0.2.0"
authors = ["tux3 <barrdetwix@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["net", "io-util", "stream", "sync"], default-features = false }
tokio-rustls = { version = "0.14", optional = true }
lazy_static = "1.4"
futures = "0.3"
regex = "1.3"
chrono = "0.4"
paste = "0.1"

[dev-dependencies]
tokio = { version = "0.2", features = ["net", "io-util", "stream", "sync", "macros"], default-features = false }
structopt = "0.3"

[features]
tls = ["tokio-rustls"]

[[example]]
name = "tls_server"
required-features = ["tls"]
