[package]
name = "rirc_server"
version = "0.2.0"
authors = ["tux3 <barrdetwix@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.6", features = ["net", "io-util", "sync", "rt"], default-features = false }
tokio-stream = { version = "0.1.6", features = ["net"] }
tokio-rustls = { version = "0.22", optional = true }
lazy_static = "1.4"
futures = "0.3"
regex = "1.3"
chrono = "0.4"
paste = "1.0"

[dev-dependencies]
tokio = { version = "1.6", features = ["net", "io-util", "sync", "macros", "rt", "rt-multi-thread"], default-features = false }
structopt = "0.3"

[features]
tls = ["tokio-rustls"]

[[example]]
name = "tls_server"
required-features = ["tls"]
